[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scene-db"
version = "0.1.0"
description = "Search and extract scenes from autonomous driving and robotics log data"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
]

[project.optional-dependencies]
test = ["pytest"]
vlm = ["openai>=1.0"]
embedding = ["sentence-transformers>=2.0"]
openai-embedding = ["openai>=1.0"]
all = ["openai>=1.0", "sentence-transformers>=2.0"]

[project.scripts]
scene-db = "scene_db.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scene_db"]

[tool.pytest.ini_options]
addopts = "-p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_xmllint -p no:ament_lint -p no:launch_testing -p no:launch_testing_ros -p no:launch_testing_ros_pytest_entrypoint"
